load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/StevenJohnston/ecucalibrator/src/bazel-go-test/cmd",
    visibility = ["//visibility:private"],
    deps = ["//src/bazel-go-test/internal/printer:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/StevenJohnston/ecucalibrator/src/bazel-go-test/cmd",
)