load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/StevenJohnston/ecucalibrator/src/bazel-go-test/cmd",
    visibility = ["//visibility:private"],
    deps = ["//src/bazel-go-test/internal/printer:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/StevenJohnston/ecucalibrator/src/bazel-go-test/cmd",
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    importpath = "github.com/StevenJohnston/ecucalibrator/src/bazel-go-test/cmd",
    visibility = ["//visibility:public"],
)

container_push(
    name = "publish",
    format = "Docker",
    registry = "gcr.io",
    repository = "ecucalibrator/bazel-buildkite",
    image = ":go_image",
    tag = "latest",
)
